# Practica-1-1S--2026-EDD

./: README.md
Practica1-1s-2026-EDD/: CMakeLists.txt  Resources.qrc  ayuda.cpp  ayuda.h  ayuda.ui  botonanimado.cpp  botonanimado.h  carta.cpp  carta.h  cartaadivinar.cpp  cartaadivinar.h  cartacambiarmazo.cpp  cartacambiarmazo.h  cartaflip.cpp  cartaflip.h  cartanormal.cpp  cartanormal.h  cartaui.cpp  cartaui.h  configuraciones.cpp  configuraciones.h  configuraciones.ui  juego.cpp  juego.h  jugador.cpp  jugador.h  ladocarta.cpp  ladocarta.h  listacircularcarta.h  listagenerica.cpp  listagenerica.h  listagenerica.tpp  listajugadores.cpp  listajugadores.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodo.cpp  nodo.h  nodo.tpp  (+9 more)
